--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -364,7 +364,7 @@
   padding: 7px 19px;
   border-radius: 5px;
   background-color: #45acdf;
-  font-size: 12px;
+  font-size: 14px;
   border: 1px solid #45acdf;
 }
 
@@ -401,6 +401,9 @@
 }
 
 .form-style {
+  -webkit-appearance: none; /* Para Safari */
+  -moz-appearance: none; /* Para Firefox */
+  appearance: none;
   padding-left: 13px;
   height: 40px;
   width: 100%;
@@ -416,5 +419,64 @@
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
   box-shadow: 0 4px 8px 0 rgba(20, 20, 20, 0.2);
+}
+
+.form-styleSelect {
+  -webkit-appearance: none; /* Para Safari */
+  -moz-appearance: none; /* Para Firefox */
+  appearance: none;
+  padding-left: 13px;
+  width: 100%;
+  font-weight: 500;
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.5px;
+  outline: none;
+  color: #c4c3ca;
+  background-color: #1f2029;
+  border: none;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+  box-shadow: 0 4px 8px 0 rgba(20, 20, 20, 0.2);
+}
+
+.back-button {
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #ffffff;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.mayusculas {
+  text-transform: uppercase;
+}
+
+a.edit {
+  background: #ffd900;
+  border-radius: 4px;
+  box-shadow: 0 2px 0px 0 rgba(0, 0, 0, 0.25);
+  color: #ffffff;
+  padding: 3px 10px 4px;
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+  transition: all 0.1s 0s ease-out;
+}
+
+a.delete {
+  background: #c10303;
+  border-radius: 4px;
+  box-shadow: 0 2px 0px 0 rgba(0, 0, 0, 0.25);
+  color: #ffffff;
+  padding: 3px 10px 4px;
+  display: inline-block;
+  position: relative;
+  text-decoration: none;
+  transition: all 0.1s 0s ease-out;
 }
 
